--- a/src/style/main.css
+++ b/src/style/main.css
@@ -44,7 +44,7 @@
     height: 100%;
     transition: transform 0.3s;
     transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 0 8px 8px rgba(0,0,0,0.2);
     border-radius: 18px;
   }
   
